<resources>
    <string name="app_name">Memoro</string>

    <string-array name="tabs">
        <item>Schedules</item>
        <item>Reminders</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_reminder">CreateReminderActivity</string>
    <string name="title_activity_create_schedule">CreateScheduleActivity</string>

    <string name="edit_reminder">Edit Reminder</string>
    <string name="create_reminder">Create Reminder</string>
    <string name="edit_schedule">Edit Schedule</string>
    <string name="create_schedule">Create Schedule</string>
    <string name="select_hour">Select a hour</string>
    <string name="reminder_deleted_message">Reminder deleted successfully</string>
    <string name="save">Save</string>
    <string name="reminder_update_message">Reminder updated successfully</string>
    <string name="reminder_create_message">Reminder created successfully</string>
    <string name="none">None</string>
    <string name="schedule_need_title">Schedule need a title</string>
    <string name="reminder_need_title">Reminder need a title</string>
    <string name="schedule_update_message">Schedule updated successfully</string>
    <string name="schedule_create_message">Schedule created successfully</string>
    <string name="schedule_deleted_message">Schedule deleted successfully</string>

    <string name="descript">Descript</string>
    <string name="schedule">Schedule</string>
    <string name="reminder">Reminder</string>
    <string name="relate_to_a_schedule">Relate to a Schedule:</string>
    <string name="day">Day</string>
    <string name="camera_photo">Camera Photo</string>
    <string name="gallery_photo">Photo Gallery</string>
    <string name="delete_reminder">Delete Reminder</string>
    <string name="delete_schedule">Delete Schedule</string>
    <string name="voice_reminder">Voice Reminder</string>
    <string name="text_reminder">Text Reminder</string>
    <string name="image_reminder">Image Reminder</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="touch_to_listen">Touch to listen</string>
    <string name="choose_the_date">Choose the date</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="start_recording">Start recording</string>
    <string name="time">Time</string>
    <string name="menu_title_save">Crop image</string>
    <string name="recording">Recording</string>
    <string name="color">Color</string>

    <string name="alert">Alert:</string>
    <string name="alert_frequency">Alert Frequency:</string>
    <string name="no_notification">Do not alert me</string>
    <string name="one_notification">Once</string>
    <string name="always_notification">Always</string>
    <string name="notification_0min">On time</string>
    <string name="notification_10min">10 minutes before</string>
    <string name="notification_30min">30 minutes before</string>
</resources>
