<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/my_toolbar_component"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/schedule_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="56dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/AppTheme"
            app:titleTextColor="@android:color/white"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/my_toolbar_component"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginLeft="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/day_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/schedule_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/schedule"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/schedule_descript"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/descript"
            android:maxLines="10" />

        <LinearLayout
            android:layout_marginLeft="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <LinearLayout
                android:clickable="true"
                android:id="@+id/click_time"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="00:00"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_gravity="center"
                    android:background="@drawable/ic_arrow_drop_down_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_marginTop="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/alert"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:orientation="horizontal">

            <RadioButton
                android:theme="@style/RadioButtonTheme"
                android:id="@+id/no_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/no_notification"
                android:textColor="@android:color/background_dark" />

            <RadioButton
                android:theme="@style/RadioButtonTheme"
                android:id="@+id/once_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_notification"
                android:textColor="@android:color/background_dark" />

            <RadioButton
                android:theme="@style/RadioButtonTheme"
                android:id="@+id/always_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/always_notification"
                android:textColor="@android:color/background_dark" />

        </LinearLayout>

        <TextView
            android:layout_marginTop="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/alert_frequency"/>

        <RelativeLayout
            android:layout_marginTop="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <RadioButton
                    android:theme="@style/RadioButtonTheme"
                    android:enabled="false"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/on_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/notification_0min"
                    android:textColor="@android:color/background_dark" />

                <RadioButton
                    android:theme="@style/RadioButtonTheme"
                    android:enabled="false"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/ten_minutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notification_10min"
                    android:textColor="@android:color/background_dark" />

                <RadioButton
                    android:theme="@style/RadioButtonTheme"
                    android:enabled="false"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/thirty_minutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notification_30min"
                    android:textColor="@android:color/background_dark" />

            </LinearLayout>
        </RelativeLayout>

        <include layout="@layout/cardview_colors"/>

    </LinearLayout>

    <Button
        android:background="#FF7F7F"
        android:id="@+id/delete_schedule"
        android:textColor="@android:color/white"
        android:text="@string/delete_schedule"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp" />
</RelativeLayout>
