<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.project.andredantas.memoro.ui.MainActivity">

    <RelativeLayout
        android:id="@+id/my_toolbar_component"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="56dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/AppTheme"
            app:titleTextColor="@android:color/white">

        </android.support.v7.widget.Toolbar>

    </RelativeLayout>

    <android.support.design.widget.CoordinatorLayout
        android:layout_below="@+id/my_toolbar_component"
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                app:tabMode="fixed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabIndicatorColor="@android:color/white"
                app:tabTextColor="@android:color/white"
                android:background="@color/colorPrimary"/>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </android.support.design.widget.CoordinatorLayout>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        fab:menu_labels_ellipsize="end"
        fab:menu_labels_singleLine="true"
        fab:menu_backgroundColor="#ccffffff"
        fab:menu_fab_label="@string/create_reminder">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_voice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_mic_white_24dp"
            fab:fab_size="mini"
            fab:fab_label="@string/voice_reminder" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_text_format_white_24dp"
            fab:fab_size="mini"
            fab:fab_label="@string/text_reminder" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_image_white_24dp"
            fab:fab_size="mini"
            fab:fab_label="@string/image_reminder" />

    </com.github.clans.fab.FloatingActionMenu>
</RelativeLayout>
