<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:background="@android:colorRealm/white">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:text="@string/choose_the_date"
        android:textColor="@colorRealm/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dataAtual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dataAtual"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="5dp"
        android:text="error"
        android:textColor="@colorRealm/colorPrimary"
        android:textSize="17sp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/area_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/errorMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="#ffffff">

        <LinearLayout
            android:id="@+id/pickers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/area_data"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/negativeButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_margin="2dp"
            android:background="@null"
            android:text="@string/cancel"
            android:textColor="@android:colorRealm/darker_gray" />

        <Button
            android:id="@+id/positiveButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_margin="2dp"
            android:background="@null"
            android:text="@string/ok"
            android:textColor="@android:colorRealm/holo_green_dark" />
    </LinearLayout>
</RelativeLayout>