<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.schedules.SchedulesFragment">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/myScrollingContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="14dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textStyle="bold"
                        android:textSize="13sp"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/monday"
                        android:id="@+id/textView" />

                    <Button
                        android:id="@+id/create_mon"
                        android:textAllCaps="false"
                        android:textSize="11sp"
                        android:textColor="@android:color/white"
                        android:textStyle="normal"
                        android:background="@color/colorPrimaryDark"
                        android:text="@string/create_schedule"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/schedule_mon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="7dp">

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="14dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textStyle="bold"
                        android:textSize="13sp"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tuesday" />

                    <Button
                        android:id="@+id/create_tue"
                        android:textAllCaps="false"
                        android:textSize="11sp"
                        android:textColor="@android:color/white"
                        android:textStyle="normal"
                        android:background="@color/colorPrimaryDark"
                        android:text="@string/create_schedule"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/schedule_tue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="7dp">

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="14dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textStyle="bold"
                        android:textSize="13sp"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wednesday" />

                    <Button
                        android:id="@+id/create_wed"
                        android:textAllCaps="false"
                        android:textSize="11sp"
                        android:textColor="@android:color/white"
                        android:textStyle="normal"
                        android:background="@color/colorPrimaryDark"
                        android:text="@string/create_schedule"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/schedule_wed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="7dp">

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="14dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textStyle="bold"
                        android:textSize="13sp"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thursday" />

                    <Button
                        android:id="@+id/create_thu"
                        android:textAllCaps="false"
                        android:textSize="11sp"
                        android:textColor="@android:color/white"
                        android:textStyle="normal"
                        android:background="@color/colorPrimaryDark"
                        android:text="@string/create_schedule"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/schedule_thu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="7dp">

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="14dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textStyle="bold"
                        android:textSize="13sp"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/friday" />

                    <Button
                        android:id="@+id/create_fri"
                        android:textAllCaps="false"
                        android:textSize="11sp"
                        android:textColor="@android:color/white"
                        android:textStyle="normal"
                        android:background="@color/colorPrimaryDark"
                        android:text="@string/create_schedule"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/schedule_fri"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="7dp">

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="14dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textStyle="bold"
                        android:textSize="13sp"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/saturday" />

                    <Button
                        android:id="@+id/create_sat"
                        android:textAllCaps="false"
                        android:textSize="11sp"
                        android:textColor="@android:color/white"
                        android:textStyle="normal"
                        android:background="@color/colorPrimaryDark"
                        android:text="@string/create_schedule"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/schedule_sat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="7dp">

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="14dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textStyle="bold"
                        android:textSize="13sp"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunday" />

                    <Button
                        android:id="@+id/create_sun"
                        android:textAllCaps="false"
                        android:textSize="11sp"
                        android:textColor="@android:color/white"
                        android:textStyle="normal"
                        android:background="@color/colorPrimaryDark"
                        android:text="@string/create_schedule"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/schedule_sun"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="7dp">

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</FrameLayout>
